--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "build:dev": "yarn cleanup && tsc -p tsconfig.json",
     "build:prod": "yarn cleanup && tsc -p tsconfig-prod.json",
     "start": "yarn build && sls offline start",
-    "deploy:development": "yarn build && sls deploy -v --stage development",
-    "deploy:staging": "yarn build && sls deploy -v --stage staging",
-    "deploy:production": "yarn build && sls deploy -v --stage production",
+    "deploy:feature": "yarn build && sls deploy -v --stage feature",
+    "deploy:development": "yarn build && sls create_domain --stage development && sls deploy -v --stage development",
+    "deploy:staging": "yarn build && sls create_domain --stage staging && sls deploy -v --stage staging",
+    "deploy:production": "yarn build && sls create_domain --stage production && sls deploy -v --stage production",
     "prettier:check": "prettier 'src/**/*.{js,jsx}' --check",
     "lint": "eslint src/** --ext .ts",
     "lint:fix": "eslint src/** --ext .ts --fix",
@@ -60,6 +61,7 @@
     "jest": ">=24.0.0 <25.0.0",
     "prettier": "^1.19.1",
     "serverless": "^1.61.1",
+    "serverless-deployment-bucket": "^1.1.2",
     "serverless-domain-manager": "^3.3.0",
     "serverless-dynamodb-local": "^0.2.39",
     "serverless-offline": "^5.12.1",
