--- a/serverless/functions/example.yml
+++ b/serverless/functions/example.yml
@@ -1,8 +1,8 @@
 # This is where you specify properties of the function -
 # name, path/value, and role that should be used
-name: ${self:service}-healthCheck-${self:custom.environment}
+name: ${self:service}-exampleFunction-${self:custom.environment}
 handler: dist/handlers/exampleHandler.handler
-role: UniversalShippingExecutionRole
+role: FunctionRole
 events:
   - http:
       path: some/path/
