--- a/serverless.yml
+++ b/serverless.yml
@@ -63,3 +63,5 @@ resources:
     ExampleExecutionRole: ${file(serverless/roles/example-execution-role.yml)}
     ExampleDomainName: ${file(serverless/domains/example-domain-name.yml)}
     ExampleBasePathMapping: ${file(serverless/domains/example-base-path-mapping.yml)}
+    # # IAM roles & policies
+    # DynamoDB tables
