--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@types/config": "^0.0.36",
     "@types/jest": "^24.0.23",
     "@types/node-fetch": "^2.5.7",
+    "@types/serverless": "^1.78.26",
     "@types/webpack-env": "^1.15.1",
     "@typescript-eslint/eslint-plugin": "^2.8.0",
     "@typescript-eslint/parser": "^2.8.0",
@@ -71,6 +72,8 @@
     "serverless-offline-sqs": "^3.1",
     "serverless-plugin-typescript": "^1.1.9",
     "ts-jest": "^24.1.0",
+    "ts-node": "^9.1.1",
+    "tsconfig-paths": "^3.9.0",
     "typescript": "^3.7.2",
     "webpack": "^4.42.0",
     "webpack-cli": "^3.3.11",
