--- a/serverless-yml/serverless.yml
+++ b/serverless-yml/serverless.yml
@@ -28,6 +28,7 @@ package:
     - src/**
     - package.json
     - README.md
+    - test/**
     - node_modules/**
 
 custom:
@@ -40,7 +41,7 @@ custom:
   vpcStackName: jenkins-ecom-example-${self:custom.envSpecific.${self:custom.environment}.nodeEnv}
 
   serverless-offline:
-    httpPort: 3010
+    port: 5000
     noPrependStageInUrl: true
     useChildProcesses: true
 
