--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,6 @@
     "lib": ["es2020"],
     "target": "es2019",
     "outDir": "dist",
-    "rootDir": "src",
     "sourceMap": true,
     "strict": false,
     "esModuleInterop": true,
@@ -14,5 +13,6 @@
     "emitDecoratorMetadata": true,
     "declaration": true
   },
-  "exclude": ["node_modules", "dist", "test", "jest", "**/*.test.ts"]
+  "include": ["src/**/*.ts", "serverless.ts"],
+  "exclude": [ "**/*.test.ts"]
 }
