--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
   "license": "ISC",
   "description": "",
   "scripts": {
+    "start": "yarn build && sls offline start",
+    "start:watch": "nodemon --exec yarn start",
     "cleanup": "rimraf dist/",
     "build": "yarn build:prod",
     "build:dev": "yarn cleanup && tsc -p tsconfig.json",
     "build:prod": "yarn cleanup && tsc -p tsconfig-prod.json",
-    "start": "yarn build && sls offline start",
     "deploy:feature": "yarn build && sls deploy -v --stage feature",
     "deploy:development": "yarn build && sls deploy -v --stage development",
     "deploy:staging": "yarn build && sls deploy -v --stage staging",
@@ -60,6 +61,7 @@
     "eslint-plugin-jest": "^23.8.2",
     "eslint-plugin-prettier": "^3.1.1",
     "jest": ">=24.0.0 <25.0.0",
+    "nodemon": "^2.0.7",
     "prettier": "^1.19.1",
     "serverless": "^1.61.1",
     "serverless-deployment-bucket": "^1.1.2",
