--- a/package.json
+++ b/package.json
@@ -83,6 +83,8 @@
     "webpack-node-externals": "^1.7.2"
   },
   "dependencies": {
+    "@middy/core": "^2.2.0",
+    "@middy/input-output-logger": "^2.2.0",
     "serverless-prune-plugin": "^1.5.0"
   }
 }
